# xavs-MSVC

./: CMakeLists.txt  dll.rc.in  exe.rc.in  libxavs.def
cmake/: Findpthread.cmake
common/: common.h
